<resources>
    <string name="app_name">mitwit</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_confirm_password">Confirm password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">Incorrect password</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_network">Network error</string>
    <string name="error_username_blank">Enter username</string>
    <string name="error_password_confirmation_blank">Enter matching password</string>
    <string name="error_password_confirmation_match">Password doesn\'t match</string>
    <string name="error_password_blank">Enter password</string>
    <string name="error_incorrect_email">Enter correct email</string>
    <string name="prompt_post_title">Enter title</string>
    <string name="prompt_post_comment">Enter comment</string>
    <string name="ok">OK</string>
    <string name="label_sign_up">If you don\'t have a profile, please</string>
    <string name="action_sign_up">Sign Up</string>
    <string name="menu_logout">Logout</string>
    <string name="add_post">Add post</string>
    <string name="refresh">Refresh</string>
    <string name="configure">Configure</string>
    <string name="create_post">Create post</string>
    <string name="post_title">Post title:</string>
    <string name="content">Content:</string>
    <string name="create">Create</string>
    <string name="loading">Loading</string>
    <string name="username_taken">Username taken</string>
    <string name="deleting_failed">Deleting failed</string>
    <string name="posting_failed">Creating post failed</string>

</resources>