<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
                                              xmlns:tools="http://schemas.android.com/tools"
                                              android:layout_width="match_parent"
                                              android:layout_height="match_parent"
                                              android:gravity="center_horizontal"
                                              android:orientation="vertical"
                                              tools:context="rs.mitwit.LoginActivity"
                                              android:background="@color/design_default_color_primary">

    <!-- Login progress -->
    <android.support.v7.widget.LinearLayoutCompat
            android:id="@+id/login_progress"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="gone"
            android:gravity="center">
        <ProgressBar
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
        />
    </android.support.v7.widget.LinearLayoutCompat>

    <ScrollView
            android:id="@+id/sign_up_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <android.support.v7.widget.LinearLayoutCompat
                android:padding="@dimen/activity_horizontal_margin"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <AutoCompleteTextView
                        android:id="@+id/username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_username"
                        android:maxLines="1"
                        android:singleLine="true"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <AutoCompleteTextView
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_email"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:singleLine="true"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_password"
                        android:imeActionId="6"
                        android:imeActionLabel="@string/action_sign_in_short"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:singleLine="true"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/confirm_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_confirm_password"
                        android:imeActionId="6"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:singleLine="true"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.v7.widget.AppCompatButton
                    android:layout_marginTop="@dimen/activity_horizontal_margin"
                    android:padding="@dimen/activity_horizontal_margin"
                    android:id="@+id/sign_in_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/action_sign_up"/>

        </android.support.v7.widget.LinearLayoutCompat>
    </ScrollView>
</android.support.v7.widget.LinearLayoutCompat>
